.opsera-vite_react_shadcn_ts/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-react-shadcn-ts
  labels:
    app: vite-react-shadcn-ts
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: vite-react-shadcn-ts
