.opsera-vite_react_shadcn_ts/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-react-shadcn-ts
  labels:
    app: vite-react-shadcn-ts
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:792373136340:certificate/9ca6cec7-6725-45a5-9d2b-19287925070e
spec:
  ingressClassName: alb
  rules:
    - host: HOSTNAME_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vite-react-shadcn-ts
                port:
                  number: 80
